--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,45 +20,26 @@
   --text-color: #000;
 
   /* fonts */
-  --body-font-family: roboto, roboto-fallback;
+  --body-font-family: 'helvetica neue', helvetica, ubuntu, roboto, noto, sans-serif;
   --heading-font-family: var(--body-font-family);
   --fixed-font-family: 'Roboto Mono', menlo, consolas, 'Liberation Mono', monospace;
 
   /* body sizes */
   --body-font-size-m: 20px;
   --body-font-size-s: 16px;
-  --body-font-size-xs: 14px;
+  --body-font-size-xs: 12px;
 
   /* heading sizes */
   --heading-font-size-xxl: 44px;
   --heading-font-size-xl: 36px;
-  --heading-font-size-l: 30px;
-  --heading-font-size-m: 22px;
-  --heading-font-size-s: 18px;
-  --heading-font-size-xs: 16px;
+  --heading-font-size-l: 28px;
+  --heading-font-size-m: 20px;
+  --heading-font-size-s: 16px;
+  --heading-font-size-xs: 14px;
 
   /* nav height */
   --nav-height: 64px;
 
-}
-
-@font-face {
-  font-family: roboto-fallback;
-  size-adjust: 100.06%;
-  ascent-override: 95%;
-  src: local('Arial');
-}
-
-
-@media (min-width: 900px) {
-  :root {
-    --heading-font-size-xxl: 60px;
-    --heading-font-size-xl: 44px;
-    --heading-font-size-l: 32px;
-    --heading-font-size-m: 28px;
-    --heading-font-size-s: 22px;
-    --heading-font-size-xs: 20px;
-  }
 }
 
 body {
@@ -72,7 +53,7 @@ body {
 }
 
 body.appear {
-  display: block;
+  display: unset;
 }
 
 header {
@@ -84,8 +65,8 @@ h4, h5, h6 {
   font-family: var(--heading-font-family);
   font-weight: 600;
   line-height: 1.25;
-  margin-top: 1em;
-  margin-bottom: .5em;
+  margin-top: 0em;
+  margin-bottom: 0em;
   scroll-margin: calc(var(--nav-height) + 1em);
 }
 
@@ -101,11 +82,14 @@ p, dl, ol, ul, pre, blockquote {
   margin-bottom: 1em;
 }
 
-hr {
-  margin-top: 1.5em;
-  margin-bottom: 1.5em;
-  border: 0;
-  border-bottom: 1px solid var(--overlay-background-color);
+a:any-link {
+  color: var(--link-color);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: var(--link-hover-color);
 }
 
 code, pre, samp {
@@ -121,25 +105,8 @@ pre {
   overflow: scroll;
 }
 
-main pre {
-  background-color: var(--overlay-background-color);
-  padding: 1em;
-  border-radius: .25em;
-  overflow-x: auto;
-  white-space: pre;
-}
-
-a:any-link {
-  color: var(--link-color);
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-  color: var(--link-hover-color);
-}
-
 /* buttons */
+
 a.button:any-link, button {
   font-family: var(--body-font-family);
   display: inline-block;
@@ -148,7 +115,7 @@ a.button:any-link, button {
   border: 2px solid transparent;
   padding: 5px 30px;
   text-align: center;
-  font-style: normal;
+  font-style: normal; 
   font-weight: 600;
   cursor: pointer;
   color: var(--background-color);
@@ -174,7 +141,8 @@ a.button.secondary, button.secondary {
   background-color: unset;
   border: 2px solid currentcolor;
   color: var(--text-color)
-}
+} 
+
 
 main input {
   font-size: 1.25rem;
@@ -182,7 +150,7 @@ main input {
   max-width: 50rem;
   display: block;
   margin-bottom: 1rem;
-  padding: 0.75rem 0.6rem;
+  padding: 0.75rem 0.6rem;    
   border-radius: 0.25rem;
   box-sizing: border-box;
   border: 1px solid var(--text-color);
@@ -192,6 +160,18 @@ main input {
 
 main input:hover {
   border: 1px solid var(--text-color);
+}
+
+main .section {
+  padding: 6px 16px;
+}
+
+main pre {
+  background-color: var(--overlay-background-color);
+  padding: 1em;
+  border-radius: .25em;
+  overflow-x: auto;
+  white-space: pre;
 }
 
 main blockquote {
@@ -211,41 +191,67 @@ main blockquote p::after {
   line-height: 0;
 }
 
+hr {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+  border: 0;
+  border-bottom: 1px solid var(--overlay-background-color);
+}
+
 main img {
   max-width: 100%;
   width: auto;
   height: auto;
 }
 
-.icon {
-  display: inline-block;
-  height: 24px;
-  width: 24px;
-}
-
-.icon img {
-  height: 100%;
-  width: 100%;
-}
-
-main .section {
-  padding: 64px 16px;
-}
-
 @media (min-width: 600px) {
   main .section {
-    padding: 64px 32px;
-  }
+    padding: 24px 32px;
+  }  
 }
 
 @media (min-width: 900px) {
+  :root {
+    --heading-font-size-xxl: 60px;
+    --heading-font-size-xl: 48px;
+    --heading-font-size-l: 36px;
+    --heading-font-size-m: 30px;
+    --heading-font-size-s: 24px;
+    --heading-font-size-xs: 22px;  
+  }
+  
+  main .section {
+    padding: 32px 32px;
+  }  
   .section > div {
     max-width: 1200px;
     margin: auto;
   }
 }
 
-/* section metadata */
+@media (prefers-color-scheme: dark) {
+  /* CSS Code wenn Dark Mode aktiv */ 
+ :root {
+  /* colors */
+  --link-color: #035fe6;
+  --link-hover-color: #136ff6;
+  --background-color: #1c1c1c;
+  --overlay-background-color: #333;
+  --highlight-background-color: #333;
+  --text-color: #fff;
+  }
+  
+  img {
+    filter: brightness(.8) contrast(1.2);
+  }
+}
+
+/* progressive section appearance */
+main .section[data-section-status='loading'],
+main .section[data-section-status='initialized'] {
+  display: none;
+}
+
 main .section.highlight {
   background-color: var(--highlight-background-color);
 }
