--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -36,5 +36,5 @@ main .hero img {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  filter: brightness(.8) contrast(1.2);
+  filter: brightness(50%) contrast(50%);
 }
