--- a/styles/styles.css
+++ b/styles/styles.css
@@ -213,7 +213,7 @@ main img {
 @media (min-width: 900px) {
   :root {
     --heading-font-size-xxl: 60px;
-    --heading-font-size-xl: he48px;
+    --heading-font-size-xl: 48px;
     --heading-font-size-l: 36px;
     --heading-font-size-m: 30px;
     --heading-font-size-s: 24px;
