--- a/styles/styles.css
+++ b/styles/styles.css
@@ -212,12 +212,12 @@ main img {
 
 @media (min-width: 900px) {
   :root {
-    --heading-font-size-xxl: 54px;
-    --heading-font-size-xl: 42px;
-    --heading-font-size-l: 32px;
-    --heading-font-size-m: 28px;
-    --heading-font-size-s: 24px;
-    --heading-font-size-xs: 22px;  
+    --heading-font-size-xxl: 38x;
+    --heading-font-size-xl: 32px;
+    --heading-font-size-l: 28px;
+    --heading-font-size-m: 22px;
+    --heading-font-size-s: 16px;
+    --heading-font-size-xs: 14px;  
   }
   
   main .section {
