--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,14 @@
 /* header and nav layout */
 header .nav-wrapper {
-  background-color: var(--background-color);
+  background-color: transparent;
+  transition: background-color 0.3s;
   width: 100%;
   z-index: 2;
   position: fixed;
+}
+
+header.scrolled .nav-wrapper {
+  background-color: var(--background-color);
 }
 
 header nav {
