--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,14 +1,9 @@
 /* header and nav layout */
 header .nav-wrapper {
-  background-color: transparent;
+  background-color: var(--background-color);
   width: 100%;
   z-index: 2;
   position: fixed;
-}
-
-header.scrolled .nav-wrapper {
-  background-color: var(--background-color);
-  transition: background-color 0.3s;
 }
 
 header nav {
@@ -147,7 +142,7 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
 header .nav-brand {
   grid-area: brand;
   flex-basis: 128px;
-  font-size: var(--heading-font-size-s);
+  font-size: var(--heading-font-size-m);
   font-weight: 700;
   line-height: 1;
 }
