--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -16,6 +16,7 @@ main .hero {
 
 main .hero h1 {
   max-width: 1200px;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
   color: white;
